...
            "state" : "translated",
            "value" : "Tillåt notiser"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schließen"
          }
...
            "state" : "translated",
            "value" : "Kontakt"
          }
        }
      }
    },
    "Contacts" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kontakte"
          }
...
            "state" : "translated",
            "value" : "Vänligen fyll i formuläret för socialt stöd varje dag."
          }
        }
      }
    },
    "Schedule" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Plan"
          }
...
            "state" : "translated",
            "value" : "Spezi applikationsmall"
          }
        }
      }
    },
    "Start Questionnaire" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fragebogen starten"
          }
...
            "state" : "translated",
            "value" : "Denna applikation demonstrerar flera Spezifunktioner och -moduler."
          }
        }
      }
    },
    "Your Account" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ihr Konto"
          }
...
