...
            }
                .multilineTextAlignment(.center)
                .padding(.vertical, 16)
            if account.signedIn {
                UserView()
                    .padding()
                Button("Logout", role: .destructive) {
                    signingOutPretrigger = true
                    try? Auth.auth().signOut()
                }
            }
        }
    }
...
